Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,9 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    list_of_terms[0,0]*x_value**list_of_terms[0,1]+list_of_terms[1,0]\n",
-    "    pass"
+    "    pass\n",
+    "outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    return sum(outputs)"
    ]
   },
   {
