Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2261,13 +2261,13 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    output_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value)\n",
+    "    returoutput_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
