--- a/index.ipynb
+++ b/index.ipynb
@@ -3282,7 +3282,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return output_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value)\n",
+    "    return (output_at(list_of_terms, x_value+delta_x)-output_at(list_of_terms, x_value))\n",
     "    pass"
    ]
   },
